# scope-faithfulness

./: .env  README.md  pyproject.toml
configs/generation/: config.yaml  summary.yaml
configs/generation/data/: totto.yaml
configs/generation/eval/: base_eval.yaml
configs/generation/generation/: llama.yaml
configs/generation/model/: llama7b.yaml
configs/training/: cliff.yaml  config.yaml
configs/training/data/: totto.yaml
configs/training/model/: llama7b.yaml
configs/training/optim/: cliff.yaml  pref_llama.yaml  sft.yaml
configs/training/peft/: full.yaml  lora.yaml
scope/: decoding.py  logits_processor.py  preprocessing.py  tasks.py  utils.py
scope/critic/: data.py  gen_critic_dataset.py  lmodule.py  model.py
scope/data/: preprocess.py
scope/data/cliff/: preprocess_neg_mask.py  preprocess_pos_bt.py  preprocess_swap_ent.py
scope/evaluation/: evaluation_standard.py  generation_launcher.py  scores.py
scope/generation/: generation.py
scope/scope/: generate.py  run_cliff.py  run_critic.py  run_scope.py  run_sft.py
scope/scope/alignment/: __init__.py  configs.py  model_utils.py  trainer.py  utils.py
