[tool.poetry]
name = "scope"
version = "0.1.0"
description = "SCOPE"
authors = ["s.duong@criteo.com", "florian.le-bronnec@dauphine.psl.eu]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
transformers = "==4.40.0"
datasets = "^2.14.5"
black = "^23.9.1"
ipdb = "^0.13.13"
isort = ">=5.8.0"
unidecode = "^1.3.7"
python-dotenv = "^1.0.0"
spacy = "^3.7.1"
omegaconf = "^2.3.0"
sentencepiece = "^0.1.99"
nltk = ">=3.6"
accelerate = "^0.27.0"
wandb = "^0.15.12"
python-hostlist = "^1.23.0"
questeval = { git = "https://github.com/flbbb/QuestEval.git", branch = "dependencies" }
rouge-score = "^0.1.2"
bert-score = "^0.3.13"
evaluate = "^0.4.1"
parent = { git = "https://github.com/flbbb/parent.git", branch = "main" }
numpy = "^1.24.4"
sacrebleu = "^2.3.3"
sentence-transformers = "^2.2.2"
trl = ">=0.8.1"
hydra-core = "^1.3.2"
lightning = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
